JVM Logger implementation